apiVersion: extensions/v1beta1 kind: Ingress metadata:   annotations:     kubernetes.io/ingress.class: "nginx"     nginx.ingress.kubernetes.io/ssl-redirect: "false"   name: frontend-ingress   namespace: default spec:   rules:     - http:         paths:           - backend:               serviceName: frontend-service               servicePort: 80             path:/Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: frontend-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: frontend-service
              servicePort: 80
            path: /
